button alignment in UserList fixed

--- a/src/components/userList/UserList.module.css
+++ b/src/components/userList/UserList.module.css
@@ -1,5 +1,15 @@
 td , th {
-    align-content: end !important;
+    align-content: center !important;
+}
+
+.button_wrapper {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.button_customize {
+    margin: auto;
 }
 
 
